--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </a>
       </div>
     </nav>
-    <h1>Testing website...</h1>
+    <center><h2>Welcome to <strong>Avamo<\strong><\h2><\center>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
