--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         </a>
       </div>
     </nav>
-    <center><h2><strong>Welcome to Avamo</strong></h2></center>
+    <div class="container">
+      <center><h2><strong>Welcome to Avamo</strong></h2></center>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
