--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
           <img src="avamo_png.png" alt="" width="24" height="24" class="d-inline-block align-text-top">
           Avamo
         </a>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="github.com/arozoid">github</a>
+        </li>
       </div>
     </nav>
     <div class="container">
