--- a/index.html
+++ b/index.html
@@ -12,20 +12,29 @@
     <link rel="shortcut icon" type="image/png" href="avamo_png.png">
   </head>
   <body>
-    <nav class="navbar navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="avamo_png.png" alt="" width="24" height="24" class="d-inline-block align-text-top">
-          Avamo
-        </a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="avamo_png.png" width="25" height="25">
+      Navbar
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">home</a>
+          <a class="nav-link active" aria-current="page" href="/">home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="github.com/arozoid">github</a>
+         <a class="nav-link" href="/about">about</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/arozoid/">github</a>
+      </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
     <div class="container">
       <center><h2><strong>Welcome to Avamo</strong></h2></center>
     </div>
