--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="avamo_png.png" width="25" height="25">  
+      <img src="avamo_png.png" alt="" width="25" height="25" class="d-inline-block align-text-top">  
       Avamo
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
