--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" type="image/png" href="avamo_png.png">
   </head>
   <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="avamo_png.png" alt="" width="25" height="25" class="d-inline-block align-text-top">  
