--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link rel="shortcut icon" type="image/png" href="avamo_png.png">
   </head>
   <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="avamo_png.png" alt="" width="25" height="25" class="d-inline-block align-text-top">  
-      Avamo
+      <strong>Avamo</strong>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
