--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
   </nav>
     <div class="container">
-      <center><h2><strong>Welcome to Avamo</strong></h2></center>
+      <div class="shadow p-3 mb-5 bg-body rounded">Welcome to Avamo</div>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
