--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="avamo_png.png" alt="" width="25" height="25" class="d-inline-block align-text-top">  
-      <strong>Avamo</strong>
+      Avamo
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -36,7 +36,7 @@
     </div>
   </nav>
     <div class="container">
-      <div class="shadow p-3 mb-5 bg-body rounded">Welcome to Avamo</div>
+      <div class="shadow p-3 mb-5 bg-body rounded"><h3><center>Welcome to Avamo</center></h3></div>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
