--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <link rel="shortcut icon" type="image/png" href="avamo_png.png">
   </head>
   <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="avamo_png.png" alt="" width="25" height="25" class="d-inline-block align-text-top">  
+      <img src="avamo_png.png" alt="" width="35" height="35" class="d-inline-block align-text-top">  
       Avamo
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
