--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
   </nav>
     <div class="container">
-      <div class="shadow p-3 mb-5 bg-body rounded"><h3><center>Welcome to Avamo</center></h3></div>
+      <div class="shadow p-3 mb-5 bg-light rounded"><h3><center>Welcome to Avamo</center></h3></div>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
