--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          <a class="nav-link" href="/about">about</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/arozoid/">https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png</a>
+          <a class="nav-link" href="https://github.com/arozoid/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" alt="github" width="35" height="35"></a>
       </ul>
       </div>
     </div>
