--- a/index.html
+++ b/index.html
@@ -34,37 +34,41 @@
       </div>
     </div>
   </nav>
-    <div class="container">
-      <div class="shadow p-3 mb-5 bg-light rounded"><h3><center>Welcome to Avamo</center></h3></div>
-      <p> </p>
-      <p><center>Avamo is an orginization with the hope of giving</center></p>
-      <p><center>good software to the world. At times we can be slow</center></p>
-      <p><center>to respond, and this is because of our workload.</center></p>
-      <div class="shadow p-3 mb-5 bg-light rounded"><h3><center>User experience</center></h3></div>
-      <p> </p>
-      <p><center>We care about user experience a lot so we try to respond to issues/pull requests</center></p>
-      <p><center>on our github page, so we can ensure that users get to suggest some features</center></p>
-      <p><center>and sometimes even help the team out a bit!</center></p>
-      <div class="shadow p-3 mb-5 bg-light rounded"><h3><center>The Avamo Team</center></h3></div>
-      <p> </p>
-      <p><center>Our team is quite hard working and supportive when it comes to coding</center></p>
-      <p><center>and user experience. Our team is made up of small developers, meaning</center></p>
-      <p><center>that it's crucial that we all work together. You are now</center></p>
-      <p><center>probably wondering who is in the team. So these are the members:</center></p>
-      <p> </p>
-      <p><center>• @Arozoid (I am the only one here lol)</center></p>
-      <p> </p>
-      <p><center>And that's it! I hope you enjoy your day, and enjoy</center></p>
-      <p><center>our software!</center></p>
-      </div>
-        <nav class="navbar navbar-light bg-light">
+    <section class="bg-dark pt-5 pb-5">
+      <div class="container">
+        <div class="shadow p-3 mb-5 bg-light rounded"><h3><center>Welcome to Avamo</center></h3></div>
+        <p> </p>
+        <p><center>Avamo is an orginization with the hope of giving</center></p>
+        <p><center>good software to the world. At times we can be slow</center></p>
+        <p><center>to respond, and this is because of our workload.</center></p>
+        <div class="shadow p-3 mb-5 bg-light rounded"><h3><center>User experience</center></h3></div>
+        <p> </p>
+        <p><center>We care about user experience a lot so we try to respond to issues/pull requests</center></p>
+        <p><center>on our github page, so we can ensure that users get to suggest some features</center></p>
+        <p><center>and sometimes even help the team out a bit!</center></p>
+        <div class="shadow p-3 mb-5 bg-light rounded"><h3><center>The Avamo Team</center></h3></div>
+        <p> </p>
+        <p><center>Our team is quite hard working and supportive when it comes to coding</center></p>
+        <p><center>and user experience. Our team is made up of small developers, meaning</center></p>
+        <p><center>that it's crucial that we all work together. You are now</center></p>
+        <p><center>probably wondering who is in the team. So these are the members:</center></p>
+        <p> </p>
+        <p><center>• @Arozoid (I am the only one here lol)</center></p>
+        <p> </p>
+        <p><center>And that's it! I hope you enjoy your day, and enjoy</center></p>
+        <p><center>our software!</center></p>
+       </div>
+      </section>
+      <footer>
+        <nav class="navbar navbar-dark bg-dark">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
               Copyright © Avamo 2022.
             </a>
           </div>
         </nav>
-
+      </footer>
+  
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
