--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </div>
   </nav>
-    <section class="bg-dark pt-5 pb-5">
+    <section class="bg-light text-dark pt-5 pb-5">
       <div class="container">
         <div class="shadow p-3 mb-5 bg-light rounded"><h3><center>Welcome to Avamo</center></h3></div>
         <p> </p>
