--- a/index.html
+++ b/index.html
@@ -59,14 +59,13 @@
         <p><center>our software!</center></p>
        </div>
       </section>
-      <footer>
-        <nav class="navbar navbar-dark bg-dark">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-              Copyright © Avamo 2022.
-            </a>
-          </div>
-        </nav>
+      <footer class="bg-light text-center text-lg-start">
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+          © 2022 Copyright:
+          <a class="text-dark" href="https://arozoid.github.io/avamo">Avamo</a>
+        </div>
+        <!-- Copyright -->
       </footer>
   
     <!-- Optional JavaScript; choose one of the two! -->
