--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
   </nav>
     <section class="bg-light text-dark pt-5 pb-5">
       <div class="container">
-        <div class="shadow p-3 mb-5 bg-light rounded"><h3><center>Welcome to Avamo</center></h3></div>
+        <div class="shadow p-3 mb-5 bg-secondary rounded"><h3><center>Welcome to Avamo</center></h3></div>
         <p> </p>
         <p><center>Avamo is an orginization with the hope of giving</center></p>
         <p><center>good software to the world. At times we can be slow</center></p>
         <p><center>to respond, and this is because of our workload.</center></p>
-        <div class="shadow p-3 mb-5 bg-light rounded"><h3><center>User experience</center></h3></div>
+        <div class="shadow p-3 mb-5 bg-secondary rounded"><h3><center>User experience</center></h3></div>
         <p> </p>
         <p><center>We care about user experience a lot so we try to respond to issues/pull requests</center></p>
         <p><center>on our github page, so we can ensure that users get to suggest some features</center></p>
         <p><center>and sometimes even help the team out a bit!</center></p>
-        <div class="shadow p-3 mb-5 bg-light rounded"><h3><center>The Avamo Team</center></h3></div>
+        <div class="shadow p-3 mb-5 bg-secondary rounded"><h3><center>The Avamo Team</center></h3></div>
         <p> </p>
         <p><center>Our team is quite hard working and supportive when it comes to coding</center></p>
         <p><center>and user experience. Our team is made up of small developers, meaning</center></p>
@@ -59,14 +59,6 @@
         <p><center>our software!</center></p>
        </div>
       </section>
-      <footer class="bg-light text-center text-lg-start">
-        <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-          © 2022 Copyright:
-          <a class="text-dark" href="https://arozoid.github.io/avamo">Avamo</a>
-        </div>
-        <!-- Copyright -->
-      </footer>
   
     <!-- Optional JavaScript; choose one of the two! -->
 
