--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="description" content="Software makers">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,36 +30,29 @@
          <a class="nav-link" href="/about">about</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/arozoid/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" alt="github" width="25" height="25"></a>
+          <a class="nav-link" href="https://github.com/arozoid/">github</a>
       </ul>
       </div>
     </div>
   </nav>
-    <section class="bg-light text-dark pt-5 pb-5">
-      <div class="container">
-        <div class="shadow p-3 mb-5 bg-secondary rounded text-light"><h3><center>Welcome to Avamo</center></h3></div>
-        <p> </p>
-        <p><center>Avamo is an orginization with the hope of giving</center></p>
-        <p><center>good software to the world. At times we can be slow</center></p>
-        <p><center>to respond, and this is because of our workload.</center></p>
-        <div class="shadow p-3 mb-5 bg-secondary rounded text-light"><h3><center>User experience</center></h3></div>
-        <p> </p>
-        <p><center>We care about user experience a lot so we try to respond to issues/pull requests</center></p>
-        <p><center>on our github page, so we can ensure that users get to suggest some features</center></p>
-        <p><center>and sometimes even help the team out a bit!</center></p>
-        <div class="shadow p-3 mb-5 bg-secondary rounded text-light"><h3><center>The Avamo Team</center></h3></div>
-        <p> </p>
-        <p><center>Our team is quite hard working and supportive when it comes to coding</center></p>
-        <p><center>and user experience. Our team is made up of small developers, meaning</center></p>
-        <p><center>that it's crucial that we all work together. You are now</center></p>
-        <p><center>probably wondering who is in the team. So these are the members:</center></p>
-        <p> </p>
-        <p><center>• @Arozoid (I am the only one here lol)</center></p>
-        <p> </p>
-        <p><center>And that's it! I hope you enjoy your day, and enjoy</center></p>
-        <p><center>our software!</center></p>
+    <main class="bg-light text-dark pt-5 pb-5">
+      <div id="content" class="bd-masthead mb-3">
+        <div class="row align-items-lg-center">
+          <div class="col-8 mx-auto col-md-4 order-md-2 col-lg-5">
+            An image will be here.
+          </div>
+          <div class="col-md-8 order-md-1 col-lg-7 text-center text-md-start">
+            <h1 class="mb-3">Title</h1>
+            <p class="lead mb-4">
+              This is a long description for
+              whatever thing you are working on!
+            </p>
+            <p class="text-muted mb-0">
+              Text about version, and more
+            </p>
+          </div>
        </div>
-      </section>
+      </main>
   
     <!-- Optional JavaScript; choose one of the two! -->
 
