--- a/index.html
+++ b/index.html
@@ -39,16 +39,21 @@
       <div id="content" class="bd-masthead mb-3">
         <div class="row align-items-lg-center">
           <div class="col-8 mx-auto col-md-4 order-md-2 col-lg-5">
-            An image will be here.
+           <p>
+            Our developers are made up of communicative, and
+            responsive people who try their hardest at giving joy
+            to our users.
+           </p>
           </div>
           <div class="col-md-8 order-md-1 col-lg-7 text-center text-md-start">
-            <h1 class="mb-3">Title</h1>
+            <h1 class="mb-3"> Avamo</h1>
             <p class="lead mb-4">
-              This is a long description for
-              whatever thing you are working on!
+               Welcome to Avamo - A little organization making software
+               for the whole world. We make side-projects such as BettrPy
+               and Chatvaa that add quality of life changes.
             </p>
             <p class="text-muted mb-0">
-              Text about version, and more
+              - From the developers of Avamo
             </p>
           </div>
        </div>
