--- a/index.html
+++ b/index.html
@@ -38,22 +38,15 @@
     <main class="bg-light text-dark pt-5 pb-5">
       <div id="content" class="bd-masthead mb-3">
         <div class="row align-items-lg-center">
-          <div class="col-8 mx-auto col-md-4 order-md-2 col-lg-5">
-           <p>
-            Our developers are made up of communicative, and
-            responsive people who try their hardest at giving joy
-            to our users.
-           </p>
-          </div>
           <div class="col-md-8 order-md-1 col-lg-7 text-center text-md-start">
             <h1 class="mb-3"> Avamo</h1>
             <p class="lead mb-4">
-               Welcome to Avamo - A little organization making software
+               <center>Welcome to Avamo - A little organization making software
                for the whole world. We make side-projects such as BettrPy
-               and Chatvaa that add quality of life changes.
+               and Chatvaa that add quality of life changes.</center>
             </p>
             <p class="text-muted mb-0">
-              - From the developers of Avamo
+              <center>- From the developers of Avamo</center>
             </p>
           </div>
        </div>
