--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div id="content" class="bd-masthead mb-3">
         <div class="row align-items-lg-center">
           <div class="col-md-8 order-md-1 col-lg-7 text-center text-md-start">
-            <h1 class="mb-3"> Avamo</h1>
+            <h1 class="mb-3"><center>Avamo</center></h1>
             <p class="lead mb-4">
                <center>Welcome to Avamo - A little organization making software
                for the whole world. We make side-projects such as BettrPy
