--- a/index.html
+++ b/index.html
@@ -36,19 +36,16 @@
     </div>
   </nav>
     <main class="bg-light text-dark pt-5 pb-5">
-      <div id="content" class="bd-masthead mb-3">
-        <div class="row align-items-lg-center">
-          <h1 class="mb-3"><center>Avamo</center></h1>
-          <p class="lead mb-4">
-             <center>Welcome to Avamo - A little organization making software
-             for the whole world. We make side-projects such as BettrPy
-             and Chatvaa that add quality of life changes.</center>
-          </p>
-          <p class="text-muted mb-0">
-            <center>- From the developers of Avamo</center>
-          </p>
-       </div>
-      </main>
+      <h1 class="mb-3 float-start"><center>Avamo</center></h1>
+      <p class="lead mb-4 float-start">
+        <center>Welcome to Avamo - A little organization making software
+          for the whole world. We make side-projects such as BettrPy
+          and Chatvaa that add quality of life changes.</center>
+      </p>
+      <p class="text-muted mb-0 float-start">
+        <center>- From the developers of Avamo</center>
+      </p>
+   </main>
   
     <!-- Optional JavaScript; choose one of the two! -->
 
