--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
     </div>
   </nav>
     <main class="bg-light text-dark pt-5 pb-5">
-      <h1 class="mb-3 float-start"><center>Avamo</center></h1>
+      <h1 class="mb-3 float-start">Avamo</h1>
       <p class="lead mb-4 float-start">
-        <center>Welcome to Avamo - A little organization making software
+        Welcome to Avamo - A little organization making software
           for the whole world. We make side-projects such as BettrPy
-          and Chatvaa that add quality of life changes.</center>
+          and Chatvaa that add quality of life changes.
       </p>
       <p class="text-muted mb-0 float-start">
-        <center>- From the developers of Avamo</center>
+        - From the developers of Avamo
       </p>
    </main>
   
