--- a/index.html
+++ b/index.html
@@ -11,41 +11,60 @@
 
     <title>Avamo</title>
     <link rel="shortcut icon" type="image/png" href="avamo_png.png">
+    <style>
+      .footer {
+          position: fixed;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          text-align: center;
+          background-color: #6C757D;
+          color: #BFC3C7;
+          padding-top: 15px;
+          padding-bottom: 15px;
+        }
+    </style>
   </head>
   <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <img src="avamo_png.png" alt="" width="35" height="35" class="d-inline-block align-text-top">  
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">home</a>
-        </li>
-        <li class="nav-item">
-         <a class="nav-link" href="/about">about</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://github.com/arozoid/">github</a>
-      </ul>
+<section class="bg-light text-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="avamo_png.png" alt="" width="35" height="35" class="d-inline-block align-text-top">  
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./index.html">home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./about.html">about</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/arozoid/">github</a>
+        </ul>
+        </div>
+      </div>
+    </nav>
+    <div id="title" class="container my-5">
+      <div class="row my-3">
+        <div class="col-lg-8 col-md-6 gap-3">
+            <h1 class="display-3" align="left"><strong>Use reliable and open-source software from Avamo</strong></h1>
+            <p class="h4 text-muted" align="left">
+              Use responsible software only created by professionals from Avamo,</p>
+            <p class="h4 text-muted" align="left">a little organization creating software with quality of life changes,</p>
+            <p class="h4 text-muted" align="left">such as Chatvaa, and lots more things like BettrPy.</p>
+            <p style="margin-bottom: 15px">&nbsp;</p>
+          <a role="button" style="margin-bottom: 60px" class="btn btn-primary btn-lg" href="./about.html"> Learn more about Avamo</a>
+        </div>
+        <div class="col-lg-4 col-md-2"><img src="avamo-web-image.png" alt="Avamo's systems are hosted by trusted companies"></div>
       </div>
     </div>
-  </nav>
-    <main class="bg-light text-dark pt-5 pb-5">
-      <h1 class="mb-3 float-start"><center>Avamo</center></h1>
-      <p class="lead mb-4 float-start">
-        <center>Welcome to Avamo - A little organization making software
-          for the whole world. We make side-projects such as BettrPy
-          and Chatvaa that add quality of life changes.</center>
-      </p>
-      <p class="text-muted mb-0 float-start">
-        <center>- From the developers of Avamo</center>
-      </p>
-   </main>
+  </section>
+  <div class="footer">© 2022 Avamo.</div>
   
     <!-- Optional JavaScript; choose one of the two! -->
 
